manifests/prometheus/virtualservice_grafana.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  labels:
    app: grafana
  name: grafana
  namespace: ${namespace}
spec:
  gateways:
  - ${gateway}
  hosts:
  %{ for host in grafana_hostnames ~}
  - "${host}"
  %{ endfor ~}
  http:
  - name: grafana
    route:
    - destination:
        host: ${grafana_destination}
        port:
          number: 80
